Don't use intrinsic width if our container's width is zero https://bugs.webkit.org/show_bug.cgi?id=178073

Reviewed by Sergio Villar Senin.

Source/WebCore:

Based on Blink r173212 by <robhogan@gmail.com>.
https://chromium.googlesource.com/chromium/src/+/1592e8a1e8e56dfa6e5d709c50b129ae659c2fad

Since at least r798 we use a replaced element's intrinsic width
if its containing block has a width of zero. As a result our rendering
of width100percent-image.html has disagreed with all other browsers
and we display replaced elements when they should be invisible.

Test: fast/replaced/container-width-zero.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeReplacedLogicalWidthUsing const):
If our container has zero width then let our width be zero too.

LayoutTests:

New rebaseline for width100percent-image.html test.

* fast/replaced/container-width-zero-expected.txt: Added.
* fast/replaced/container-width-zero.html: Added.
* platform/ios/fast/replaced/width100percent-image-expected.txt:
* platform/gtk/fast/replaced/width100percent-image-expected.png:
* platform/gtk/fast/replaced/width100percent-image-expected.txt:
* platform/mac/fast/replaced/width100percent-image-expected.png:
* platform/mac/fast/replaced/width100percent-image-expected.txt:
* platform/win/TestExpectations: Skips test as it needs a rebaseline.


Canonical link: https://commits.webkit.org/194550@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223389 268f45cc-cd09-0410-ab3c-d52691b4dbfc